--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="author" content="David Findley">
     <link rel="shortcut icon" href="favicon.ico">
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'> 
+    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <!-- Global CSS -->
     <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
     <!-- Plugins CSS -->
@@ -28,7 +28,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-</head> 
+</head>
 
 <body>
     <!-- ******HEADER****** -->
@@ -54,10 +54,9 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>I am a full stack web developer/architect with 20 years experience delivering web applications used by millions of users worldwide. 
-                                I love using technology to solve difficult problems that delight and amaze my customers. Most recently I've been working on 
-                                backend services and big data no-sql systems at Amazon. In my spare time my son and I have been learning about AI and machine learning 
-                                with tensorflow and Jupyter notebooks.</p>
+                            <p>I am a software engineer with 20 years experience delivering web applications used by millions of users worldwide.
+                            I love using technology to solve difficult problems that delight and amaze my customers. Most recently I've been working on
+                            backend services and big data no-sql systems at Amazon.</p>
                         </div>
                     </div><!--//section-inner-->
                 </section><!--//section-->
@@ -68,18 +67,20 @@
                         <div class="item">
                             <h3 class="title">Sr. Software Engineer - <span class="place"><a href="http://www.amazon.com">Amazon</a></span> <span class="year">(2016 - Present)</span></h3>
 
-                            <p>Responsiblities include system design and reviews, code reviews, implementation, operations and mentoring other SDEs. My team provides services to hundreds of marketing teams across 
-                            Amazon that enable experimentation and analysis of marketing campaigns. Our system matches the best campaigns with each customer based on many factors such as a campaign's historical 
-                            performance, customer behavior and ML models produced by Amazon's data science teams. The majority of my individual project work has been on email and mobile push metrics and reporting.</p>
+                            <p>My team provides services to hundreds of marketing teams across Amazon that enable experimentation and analysis of marketing campaigns.
+                            Our system matches the best campaigns with each customer based on many factors such as a campaign's historical performance, customer
+                            behavior and ML models produced by Amazon's data science teams. My responsiblities include prototyping, system design and reviews, code reviews,
+                            implementation, operations and mentoring other SDEs. The majority of my individual project work has been on email and mobile push metrics
+                            and reporting.</p>
 
-                            <p>In my time at Amazon I have had the opportunity to work with big data technolgies such as Hadoop, Hive and Spark, write and maintain services using Python, Scala and Java and leverage 
-                            public AWS services such as EMR, Kinesis, SQS, AWS Glue and Redshift.</p>
+                            <p>In my time at Amazon I have had the opportunity to work with big data technolgies such as Hadoop, Hive and Spark, write and maintain
+                            services using Python, Scala and Java and leverage public AWS services such as EMR, Kinesis, SQS, AWS Glue and Redshift.</p>
                         </div>
                         <div class="item">
                             <h3 class="title">Technical Architect - <span class="place"><a href="http://www.marykay.com">Mary Kay</a></span> <span class="year">(2009 - 2016)</span></h3>
 
                             <ul>
-                                <li><strong>Sitecore</strong> - Worked on replatforming marykay.com and marykayintouch.com on Sitecore CMS. In this role I'm acting as the Sitecore architect. I provided prototypes and code samples for the more difficult parts of the application and provide technical guidance to the development staff and partners that were building the solution.</li>
+                                <li><strong>Sitecore</strong> - Worked on replatforming marykay.com and marykayintouch.com on Sitecore CMS. In this role I acted as the Sitecore architect. I provided prototypes and code samples for the more difficult parts of the application and provided technical guidance to the development staff and partners that were building the solution.</li>
                                 <li><strong>Quartet Services</strong> - Led the technical design and implementation of the services tier for marykay.com and its Personal Web Site program that allows Mary Kay consultants to sign up for and sell Mary Kay products online. The service was developed using WCF hosted in IIS. A CQRS design was used that separated commands from queries. A domain model was produced using DDD and state is persisted using an Event Sourcing strategy. The event store is currently in SQL server. The event sourcing strategy made integrating ElasticSearch very easy. ElasticSearch provides the full text searching and filtering capabilities for the myCustomers application.</li>
                                 <li><strong>myCustomers</strong> - Led the design and implementation of a UX redesign for myCustomers. myCustomers is a CRM tool that Mary Kay consultants use to manage their customer list and orders placed online at marykay.com</li>
                                 <li><strong>FrontOffice CRM</strong> - Participated in the delivery of a WPF composite UI application used by the telephone support staff. The interesting technology here was the MVVM pattern with WPF, Unity and MEF for pluggable UI components and Reactive extensions for .NET (Rx) for loosely coupled event processing.</li>
@@ -156,7 +157,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                
+
                                 <div class="item">
                                     <h3 class="level-title">ASP.NET WebAPI<span class="level-label">Pro</span></h3>
                                     <div class="level-bar">
@@ -205,7 +206,7 @@
         </div><!--//row-->
     </div><!--//masonry-->
 
-    <!-- ******FOOTER****** --> 
+    <!-- ******FOOTER****** -->
     <footer class="footer">
         <div class="container text-center">
             <small class="copyright">Designed with <i class="fa fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
