--- a/resume/resume.html
+++ b/resume/resume.html
@@ -299,7 +299,7 @@
                                 campaigns. Our system matches the best campaigns with each customer based
                                 on many factors such as a campaign&#39;s historical performance, customer
                                 behavior and ML models produced by Amazon&#39;s data science teams. My
-                                responsiblities include prototyping, system design and reviews, code reviews,
+                                responsibilities include prototyping, system design and reviews, code reviews,
                                 implementation, operations and mentoring other SDEs. The majority of my
                                 individual project work has been on email and mobile push metrics and reporting.
                                 Here are some highlights from my time at Amazon so far:</p>
@@ -309,7 +309,7 @@
                                 event data with internal analytics teams.</li>
                             <li>Implemented streaming click/open analytics using AWS Kinesis and AWS Glue.
                                 This project replaced the Oracle implementation and reduced the delay for
-                                metric data availablity from 24-48hrs to 1-2 hours.</li>
+                                metric data availability from 24-48hrs to 1-2 hours.</li>
                             <li>Implemented idempotency enforcement for email sending at scale ensuring
                                 that no email is sent more than once.</li>
                             <li>Prototyped realtime click/open rate dashboard using ElasticSearch and
@@ -326,9 +326,9 @@
                             <p>Mary Kay manufactures and sells cosmetics through a global network of
                                 independent beauty consultants. Having spent the majority of my career
                                 at Mary Kay, I enjoyed working on a diverse set of products and services
-                                that enabled the company grow into a truly global company with over $4billion
-                                of anual wholesale volume. Here are some hilights of the things I worked
-                                on most recently at Mary Kay:</p>
+                                that enabled the company grow into a truly global company with over $4
+                                billion of annual wholesale volume. Here are some highlights of the things
+                                I worked on most recently at Mary Kay:</p>
                         </p>
                         <ul>
                             <li>Worked on replatforming marykay.com and marykayintouch.com on Sitecore
@@ -339,43 +339,43 @@
                                 Kay&#39;s product catalog system and built the search and faceted product
                                 category pages.</li>
                             <li>Built the CI/CD deployment pipeline for the Sitecore projects. Prior to
-                                the Sitecore projects these sites were built using Sharepoint and releases
+                                the Sitecore projects these sites were built using SharePoint and releases
                                 would take as long as 6 hours to complete. Using my automated build and
                                 deploy system these releases could be executed in minutes. Additionally,
                                 developers could use the same deployment scripts on their local development
                                 machines which reduced their environment setup time from days to minutes
-                                compared to the Sharepoint development process.</li>
+                                compared to the SharePoint development process.</li>
                             <li>Prototyped deploying Sitecore on Windows Server containers as a POC for
                                 our operations group.</li>
                             <li>Led the design and implementation of a UX redesign for myCustomers. myCustomers
                                 is a CRM tool that Mary Kay consultants use to manage their customer list
-                                and orders placed online at marykay.com. I boostrapped the project using
-                                KockoutJS and Bootstrap css. Working with BAs and Stakeholders in weekly
-                                iterations I would get feedback and approval on UX using functional protoypes
-                                built using KnockuotJS, Twitter Bootstrap and mocked backend services.
+                                and orders placed online at marykay.com. I bootstrapped the project using
+                                KnockoutJS and Bootstrap CSS. Working with BAs and Stakeholders in weekly
+                                iterations I would get feedback and approval on UX using functional prototypes
+                                built using KnockoutJS, Twitter Bootstrap and mocked backend services.
                                 These prototypes were built directly in the project and the team and I
                                 would complete the implementation once they UX was approved. We completed
-                                the redesign in 2 months compared to the 15 month developemnt effort on
+                                the redesign in 2 months compared to the 15-month development effort on
                                 the previous version. My team received a CIO award for delivering the finished
                                 product in record time and the positive feedback from our stake holders
                                 and Mary Kay consultants.</li>
-                            <li>I integrated ElasticSearch with myCustomers to provide the feceted customer
+                            <li>I integrated ElasticSearch with myCustomers to provide the faceted customer
                                 and order history searches. I was able to rapidly implement this feature
-                                because of the async event based architecture of the backend services I
+                                because of the async event-based architecture of the backend services I
                                 had previously built.</li>
                             <li>Led the technical design and implementation of the services for marykay.com
                                 and its Personal Web Site program that allows Mary Kay consultants to sign
                                 up for and sell Mary Kay products online. I used a domain driven design
-                                approach and a CQRS/EventSourced architecture. I built out the intial code,
-                                unit tests and build automation. As the project grew I provided mentoring
+                                approach and a CQRS/EventSourced architecture. I built out the initial
+                                code, unit tests and build automation. As the project grew I provided mentoring
                                 and code reviews for new team members.</li>
-                            <li>The FrontOffice CRM sytem is a WPF application used internally by telepone
+                            <li>The FrontOffice CRM system is a WPF application used internally by telephone
                                 support. The web browser views in the application used an embedded IE control
-                                that sometimes crashed the application. I implmented a new model that hosted
-                                the web browser in another process similar to how Google Chrome works.
-                                This reduced the impact of web view crashes and enabled the use of newer
-                                versions of IE.</li>
-                            <li>The FrontOffice CRM system also needed a realtime push notification system
+                                that sometimes crashed the application. I implemented a new model that
+                                hosted the web browser in another process similar to how Google Chrome
+                                works. This reduced the impact of web view crashes and enabled the use
+                                of newer versions of IE.</li>
+                            <li>The FrontOffice CRM system also needed a real-time push notification system
                                 to send state change notifications between all of the running instances.
                                 I built a service and client API for this feature. The client API provided
                                 a reactive programming model using .NET Rx extensions. The real challenge
@@ -396,12 +396,12 @@
                         <p>
                             <p>DevU (formerly LearnVisualStudio.net) is a video training site focused
                                 mainly on Microsoft .NET languages and tools. In this startup environment
-                                of about 4 employees I took on many roles from building the cms, payment
+                                of about 4 employees I took on many roles from building the CMS, payment
                                 and email campaign systems to developing example code used for training
                                 content.</p>
                         </p>
                         <ul>
-                            <li>Developed ecommerce solution for selling subscription based access to
+                            <li>Developed ecommerce solution for selling subscription-based access to
                                 video training content. Both LearnVisualStudio.NET and TrainingSpot.com
                                 use this solution.</li>
                             <li>Developed an email campaign tool used to drive traffic and sales for LearnVisualStudio.NET</li>
